tests/doWhile/invalid/Syntax/DO-WHILE_donoErr.wacc
# missing while

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  do
    skip
  false
end
